# expedia_hotel_recommendation

./: .gitignore  README.md  environment.yml  model_log.xlsx  pyproject.toml  requirements.txt  setup.sh
logs/: 0429_xgb_v1
model_finished/offline_features/: position_features.csv
notebooks/: 0603_0503_lgbmranker_v2_feature_model_validation.ipynb  0828_impute_null_value.ipynb  1218_NDCG_sample_diginto.ipynb  feature_validation.ipynb  playground.ipynb  v1.ipynb
report/: code_structure.md  feature_engineering.md  model_iteration.md
scripts/: __init__.py  create_offline_features.py  create_offline_features_logging_debug.py  data_cvt.py  model_batch_inference.py  model_eval.py  model_predict.py  model_train.py  position_benchmark.py  reduce_file_size.py  train_config.py
src/: NewOrdinalEncoder.py  __init__.py  config.py  save_submission.py  tmp.py
src/BaseClass/: BaseFeatureCreator.py  BasePipeline.py  __init__.py
src/DLModel/: FM_model.py  __init__.py
src/DataPreprocess/: DeepFMDataProcess.py
src/DataProfiling/: __init__.py
src/Evaluation/: __init__.py
src/FeatureCreator/: FeatureCreator.py  FeatureCreatorV2.py  FeatureCreatorV3.py  FeatureCreatorV4.py  FeatureCreatorV5.py  FeatureCreatorV6.py  ItemFeatureCreator.py  ItemFeatureCreatorV2.py  UserFeatureCreator.py  XGBFeatureCreator.py  __init__.py  utils.py
src/Pipeline/: DNNPipeline.py  DeepFMPipeline.py  LGBMRankerPipeline.py  LGBRegPipeline.py  RidgeReg.py  XGBRegressionPipeline.py  XGBoostPipeline.py  __init__.py
src/utils/: __init__.py  confusion_matrix_pretty_print.py  grid_search.py  (+3 more)
(+6 files in other folders)
