[tool.poetry]
name = "expedia-hotel-rec"
version = "0.1.0"
description = ""
authors = ["Hua Guo <huag@kth.se>"]
readme = "README.md"
packages = [{include = "expedia_hotel_rec"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
absl-py = "1.0.0"
asn1crypto = "0.24.0"
astor = "0.8.1"
automat = "0.6.0"
blinker = "1.4"
cached-property = "1.5.2"
certifi = "2022.5.18.1"
chardet = "3.0.4"
charset-normalizer = "2.0.12"
click = "6.7"
colorama = "0.3.7"
configobj = "5.0.6"
constantly = "15.1.0"
cryptography = "2.1.4"
cycler = "0.11.0"
google-pasta = "0.2.0"
grpcio = "1.46.3"
httplib2 = "0.9.2"
hyperlink = "17.3.1"
idna = "3.3"
importlib-metadata = "4.8.3"
importlib-resources = "5.4.0"
incremental = "16.10.1"
joblib = "1.1.0"
jsonpatch = "1.16"
jsonpointer = "1.10"
jsonschema = "2.6.0"
kaggle = "1.5.12"
keras-applications = "1.0.8"
keras-preprocessing = "1.1.2"
keyring = "10.6.0"
keyrings-alt = "3.0"
kiwisolver = "1.3.1"
lightgbm = "3.3.2"
markdown = "3.3.7"
deepctr = "^0.9.3"
tensorflow = "^2.11.0"
seaborn = "^0.12.2"
pandas-profiling = "^3.6.6"
xgboost = "^1.7.4"
pydot = "^1.4.2"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
